--- a/xall/x68/550-mailredirect/src/manifest.json
+++ b/xall/x68/550-mailredirect/src/manifest.json
@@ -9,7 +9,7 @@
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
   "author": "Onno Ekker",
-  "version": "0.10.4",
+  "version": "0.10.6",
   "homepage_url": "https://mailredirect.sourceforge.io/",
   "legacy": {
     "options": {
@@ -17,8 +17,9 @@
       "open_in_tab": true
     }
   },
-  "default_locale": "en",
+  "default_locale": "en-US",
   "icons": {
-    "32": "icon.png"
+    "32": "icon.png",
+    "64": "icon64.png"
   }
 }
