--- a/xall/x68/348798-evernote-tab/src/manifest.json
+++ b/xall/x68/348798-evernote-tab/src/manifest.json
@@ -1,17 +1,38 @@
 {
-  "manifest_version": 2,
-  "name": "Evernote Tab",
-  "description": "Add a button and a menu to open Evernote in tab.",
-  "version": "0.1.21",
-  "author": "H.Ogi",
-  "homepage_url": "http://hogi.sakura.ne.jp/en/",
-  "legacy": {
-  	"type": "xul"
-  },
-  "applications": {
-    "gecko": {
-      "id": "{88B31EFE-2E3B-43a6-A805-B53433C3B265}",
-      "strict_min_version": "68.0"
+    "manifest_version": 2,
+    "name": "__MSG_extensionName__",
+    "description": "__MSG_extensionDescription__",
+    "version": "2.0.2",
+    "author": "H.Ogi",
+    "homepage_url": "__MSG_extensionHomepage_url__",
+
+    "browser_action": {
+        "default_title": "__MSG_extensionDefault_title__",
+        "default_icon": "images/webclipper24.png"
+    },
+  
+    "permissions": [
+      "tabs",
+      "webNavigation",
+      "cookies"
+    ],
+  
+    "background": {
+      "scripts": [
+        "scripts/background.js"
+      ]
+    },
+  
+    "icons": {
+        "24": "images/webclipper24.png"
+    },
+  
+    "default_locale": "en",
+  
+    "applications": {
+        "gecko": {
+            "id": "{88B31EFE-2E3B-43a6-A805-B53433C3B265}",
+            "strict_min_version": "78.0"
+        }
     }
-  }
 }
