--- a/xall/x68/987848-kundenmeister-mail-export/src/manifest.json
+++ b/xall/x68/987848-kundenmeister-mail-export/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "KundenMeister Email Import",
-  "description": "An email import addon from KundenMeister.",
-  "version": "1",
+  "name": "KundenMeister CRM Mail Export",
+  "description": "An mail export add-on from KundenMeister.",
+  "version": "1.1.1",
   "icons": {
     "48": "icons/Kundenmeister.png"
   },
