--- a/xall/x68/2299-threadkey/src/manifest.json
+++ b/xall/x68/2299-threadkey/src/manifest.json
@@ -1,17 +1,49 @@
 {
   "manifest_version": 2,
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
       "id": "{1a2d9681-ba56-11da-959b-00e08161165f}",
-      "strict_min_version": "67.0a1"
+      "strict_min_version": "78.0a1"
     }
   },
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
   "author": "Onno Ekker",
-  "version": "1.4",
-  "legacy": {
-    "type": "bootstrap"
+  "version": "2.0a2",
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
+  "experiment_apis": {
+    "myapi": {
+      "schema": "schema.json",
+      "parent": {
+        "scopes": ["addon_parent"],
+        "paths": [["myapi"]],
+        "script": "threadkey.js"
+      }
+    }
+  },
+  "commands": {
+    "cmd_threadSort": {
+      "description" : "View > Sort By > Threaded.",
+      "suggested_key": {
+        "default": "Alt+Shift+T"
+      }
+    },
+    "cmd_unthreadSort": {
+      "description" : "View > Sort By > Unthreaded.",
+      "suggested_key": {
+        "default": "Alt+Shift+U"
+      }
+    },
+    "cmd_groupBySort": {
+      "description" : "View > Sort By > Grouped By Sort.",
+      "suggested_key": {
+        "default": "Alt+Shift+G"
+      }
+    }
   },
   "homepage_url": "https://threadkey.sourceforge.io/",
   "default_locale": "en",
