--- a/xall/x68/987823-autobucket/src/manifest.json
+++ b/xall/x68/987823-autobucket/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "AutoBucket",
-  "version": "1.1.0",
+  "version": "1.1.3",
   "author": "A-tak",
   "description": "__MSG_extensionDescription__",
   "homepage_url": "__MSG_homepage__",
@@ -20,7 +20,8 @@
     "messagesRead",
     "menus",
     "storage",
-    "accountsRead"
+    "accountsRead",
+    "notifications"
   ],
   "browser_action": {
     "default_icon": "icons/icon_48.png",
