--- a/xall/x68/986682-disable-draganddrop-tb-v2/src/manifest.json
+++ b/xall/x68/986682-disable-draganddrop-tb-v2/src/manifest.json
@@ -8,9 +8,19 @@
   },
   "name": "Disable DragAndDrop (Thunderbird)",
   "description": "Disable drag and drop on the folder tree in order to prevent unintended folder movement.",
-  "version": "4.3.0",
+  "version": "4.4.0",
   "homepage_url": "https://disable-draganddrop-tb.pqrs.org",
-  "legacy": {
-    "type": "bootstrap"
+  "background": {
+    "scripts": ["background-script.js"]
+  },
+  "experiment_apis": {
+    "org_pqrs_disable_dnd_tb_v2": {
+      "schema": "schema.json",
+      "parent": {
+        "scopes": ["addon_parent"],
+        "paths": [["org_pqrs_disable_dnd_tb_v2"]],
+        "script": "implementation.js"
+      }
+    }
   }
 }
