--- a/xall/x68/987660-taskviewflexlayout/src/manifest.json
+++ b/xall/x68/987660-taskviewflexlayout/src/manifest.json
@@ -6,15 +6,15 @@
                    "strict_min_version": "78.0"
                     }
              },
-	"name": "TaskviewLayout",
-	"version": "62.7",
+	"name": "TaskviewFlexLayout",
+	"version": "62.9",
 	"description": "",
              "icons": {
                "32": "tv32.png"
                  },
 "browser_action": {
     "default_icon": "tv32.png",
-    "default_title": "TaskviewLayout",
+    "default_title": "TaskviewFlexLayout",
     "default_popup": "popup.html"
   },
 "permissions": [
